--- a/css/styles.css
+++ b/css/styles.css
@@ -476,3 +476,66 @@ margin: 0 auto;
     .footer-svg {
         fill: #f4f4fd;
     }
+    .footer-subscribe-title {
+        font-weight: 500;
+            font-size: 16px;
+            line-height: 1.50;
+            letter-spacing: 0.02em;
+            color: #fff;
+            margin-bottom: 16px;
+    }
+.footer-subscribe {
+    margin-left: 80px;
+}
+    
+    .footer-form {
+        display: flex;
+    }
+
+   
+.footer-group {display: flex;
+gap: 24px;
+}
+    
+    .form-input {
+        border: 1px solid #fff;
+            border-radius: 4px;
+            width: 264px;
+            height: 40px;
+            background-color: transparent;
+            box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+            background: #2e2f42;
+            padding-left: 16px;
+            margin: 0;
+    }
+    
+    .form-input::placeholder {
+        font-weight: 400;
+            font-size: 12px;
+            line-height: 2;
+            letter-spacing: 0.04em;
+            color: #fff;
+    }
+
+    .form-button {display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 16px;
+        padding: 0;
+        border-radius: 4px;
+        width: 165px;
+        height: 40px;
+        background: #4d5ae5;
+        cursor: pointer;
+        border: none;
+        color: #fff;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.50;
+        letter-spacing: 0.04em;
+        margin-right: auto;
+        margin-left: auto;
+    }
+.footer-subscribe-icon {
+    fill: #fff;
+}
