--- a/css/styles.css
+++ b/css/styles.css
@@ -497,7 +497,7 @@ margin: 0 auto;
 gap: 24px;
 }
     
-    .form-input {
+    .footer-form-input {
         border: 1px solid #fff;
             border-radius: 4px;
             width: 264px;
@@ -507,14 +507,20 @@ gap: 24px;
             background: #2e2f42;
             padding-left: 16px;
             margin: 0;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
-    .form-input::placeholder {
+    .footer-form-input::placeholder {
         font-weight: 400;
             font-size: 12px;
             line-height: 2;
             letter-spacing: 0.04em;
             color: #fff;
+    }
+
+    .footer-form-input:hover,
+    .footer-form-input:focus {
+border-color: #404bbf;
     }
 
     .form-button {display: flex;
@@ -535,7 +541,165 @@ gap: 24px;
         letter-spacing: 0.04em;
         margin-right: auto;
         margin-left: auto;
+        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
+    .form-button:hover,
+    .form-button:focus {
+        background-color: #404bbf;
+        border: none;
+    }
+
 .footer-subscribe-icon {
     fill: #fff;
+}
+
+.backdrop {position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background: rgba(46, 47, 66, 0.4);
+z-index: 999;
+display: flex;
+justify-content: center;
+align-items: center;
+opacity: 0;
+visibility: hidden;
+pointer-events: none;
+transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+ visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-open {
+ opacity: 1;
+visibility: visible;
+pointer-events: auto;
+}
+
+.modal {
+position: absolute;
+top: 50%;
+left: 50%;
+width: 408px;
+min-height: 584px;
+transform: translate(-50%, -50%);
+box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+background-color: #fcfcfc;
+border-radius: 4px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} 
+
+.backdrop:not(.is-open) .modal {
+transform: translate(-50%, -100%);
+}
+
+.modal-close {position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 24px;
+    right: 24px;
+    border-radius: 50%;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    width: 24px;
+    height: 24px;
+    background-color: #e7e9fc;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover {
+    background-color: #404bbf;
+    border: none;
+}
+.modal-close:focus {
+    background-color: #404bbf;
+    border: none;
+}
+
+.modal-close:hover .modal-close-svg {
+    fill: #fff;
+}
+.modal-close:focus .modal-close-svg {
+    fill: #fff;
+}
+
+.modal-text {display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 72px;
+    padding-bottom: 16px;
+    font-weight: 500;
+        font-size: 16px;
+    
+        line-height: 150%;
+        letter-spacing: 0.02em;
+        text-align: center;
+        color: #2e2f42;
+}
+
+.modal-form {
+    border-radius: 4px;
+        width: 360px;
+        height: 336px;
+        padding-left: 24px;
+}
+
+.form-field {
+    display: block;
+}
+
+.modal-label {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+}
+
+.input-wrapper {
+    position: relative;
+}
+
+.form-input {
+    border: 1px solid #4d5ae5;
+        border-radius: 4px;
+        width: 100%;
+        height: 40px;
+        background-color: transparent;
+        outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        
+}
+
+.form-icon {position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.primary-btn {display: block;
+    border-radius: 4px;
+        padding: 16px 32px;
+        width: 169px;
+        height: 56px;
+        box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+        background: #4d5ae5;
+        border: none;
+        cursor: pointer;
+        margin-bottom: 24px;
+            font-weight: 500;
+            font-size: 16px;
+            line-height: 1.5;
+            letter-spacing: 0.04em;
+            text-align: center;
+            color: #fff;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.primary-btn:hover,
+.primary-btn:focus {
+  background-color: #404BBF;
 }
