--- a/css/styles.css
+++ b/css/styles.css
@@ -640,15 +640,19 @@ transform: translate(-50%, -100%);
         color: #2e2f42;
 }
 
-.modal-form {
+.modal-form {display: flex;
+    flex-direction: column;
     border-radius: 4px;
-        width: 360px;
+        width: 100%;
         height: 336px;
-        padding-left: 24px;
+        
 }
 
 .form-field {
     display: block;
+    padding-right: 24px;
+    padding-left: 24px;
+    margin-bottom: 8px;
 }
 
 .modal-label {
@@ -657,6 +661,8 @@ transform: translate(-50%, -100%);
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
+        padding-top: 8px;
+        padding-bottom: 4px;
 }
 
 .input-wrapper {
@@ -664,21 +670,37 @@ transform: translate(-50%, -100%);
 }
 
 .form-input {
-    border: 1px solid #4d5ae5;
+    border: 1px solid rgba(46, 47, 66, 0.4);
         border-radius: 4px;
         width: 100%;
         height: 40px;
         background-color: transparent;
         outline: transparent;
         transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        
+        cursor: pointer;
+        padding-left: 38px;
 }
+
+.form-input:hover {
+    border: 1px solid #4d5ae5;
+}
+.form-input:focus {
+    border: 1px solid #4d5ae5;}
 
 .form-icon {position: absolute;
     left: 16px;
     top: 50%;
     transform: translateY(-50%);
+    color: #2e2f42;
 }
+
+.form-input:hover + .form-icon {
+    fill: #4d5ae5;
+}
+.form-input:focus + .form-icon {
+    fill: #4d5ae5;
+}
+
 
 .primary-btn {display: block;
     border-radius: 4px;
