--- a/css/styles.css
+++ b/css/styles.css
@@ -701,6 +701,90 @@ transform: translate(-50%, -100%);
     fill: #4d5ae5;
 }
 
+.modal-textarea {
+    display: block;
+    padding-right: 24px;
+        padding-left: 24px;
+}
+
+textarea {
+    resize: none;}
+
+.form-textarea {
+border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    width: 100%;
+    height: 120px;
+    background-color: transparent;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding-left: 16px;
+    padding-top: 8px;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+}
+
+.form-textarea:hover,
+.form-textarea:focus {
+    border: 1px solid #4d5ae5;
+}
+
+.form-textarea::placeholder {
+        color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-checkbox {padding-left: 24px;
+margin-bottom: 24px;
+margin-top: 16px;}
+
+
+.checkbox-span {
+    width: 16px;
+    height: 16px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+     display: inline-flex;
+     justify-content: center;
+     align-items: center;
+     margin-right: 8px;
+     fill: transparent;
+     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-span:active {
+    background-color: #404BBF;
+}
+
+.checkbox-svg {
+    fill: #f4f4fd;
+    transition: fill cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+input:checked+label>span {
+    border: none;
+    background-color: #404BBF;
+    fill: #404bbf;
+}
+
+.checkbox-label {text-align: center;
+    font-weight: 400;
+        font-size: 12px;
+        line-height: 1.17;
+        letter-spacing: 0.04em;
+        color: #8e8f99;
+        margin-bottom: 24px;
+}
+
+.checkbox-link {
+        line-height: 1.33;
+        text-decoration: underline;
+        text-decoration-skip-ink: none;
+        color: #4d5ae5;
+}
 
 .primary-btn {display: block;
     border-radius: 4px;
@@ -712,6 +796,7 @@ transform: translate(-50%, -100%);
         border: none;
         cursor: pointer;
         margin-bottom: 24px;
+        margin-left: 119px;
             font-weight: 500;
             font-size: 16px;
             line-height: 1.5;
