--- a/css/styles.css
+++ b/css/styles.css
@@ -490,6 +490,7 @@ margin: 0 auto;
     
     .footer-form {
         display: flex;
+        gap: 24px;
     }
 
    
@@ -508,14 +509,15 @@ gap: 24px;
             padding-left: 16px;
             margin: 0;
             transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
+            font-weight: 400;
+                font-size: 12px;
+                line-height: 2;
+                letter-spacing: 0.04em;
+                color: #ffffff
+        }
     
     .footer-form-input::placeholder {
-        font-weight: 400;
-            font-size: 12px;
-            line-height: 2;
-            letter-spacing: 0.04em;
-            color: #fff;
+            color: color #ffffff;
     }
 
     .footer-form-input:hover,
@@ -523,7 +525,8 @@ gap: 24px;
 border-color: #404bbf;
     }
 
-    .form-button {display: flex;
+    .form-button {font-family: "Roboto", sans-serif;
+        display: flex;
         align-items: center;
         justify-content: center;
         gap: 16px;
@@ -552,6 +555,7 @@ border-color: #404bbf;
 
 .footer-subscribe-icon {
     fill: #fff;
+    margin-left: 16px;
 }
 
 .backdrop {position: fixed;
@@ -567,8 +571,7 @@ align-items: center;
 opacity: 0;
 visibility: hidden;
 pointer-events: none;
-transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1),
- visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .backdrop.is-open {
@@ -582,6 +585,7 @@ position: absolute;
 top: 50%;
 left: 50%;
 width: 408px;
+padding: 72px 24px 24px 24px;
 min-height: 584px;
 transform: translate(-50%, -50%);
 box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -598,6 +602,7 @@ transform: translate(-50%, -100%);
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
     top: 24px;
     right: 24px;
     border-radius: 50%;
@@ -626,10 +631,13 @@ transform: translate(-50%, -100%);
     fill: #fff;
 }
 
+.modal-close-svg {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-text {display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 72px;
     padding-bottom: 16px;
     font-weight: 500;
         font-size: 16px;
@@ -652,17 +660,15 @@ transform: translate(-50%, -100%);
     display: block;
     padding-right: 24px;
     padding-left: 24px;
-    margin-bottom: 8px;
 }
 
-.modal-label {
+.modal-label {display: block;
         font-weight: 400;
         font-size: 12px;
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
-        padding-top: 8px;
-        padding-bottom: 4px;
+        margin-bottom: 4px;
 }
 
 .input-wrapper {
@@ -692,6 +698,7 @@ transform: translate(-50%, -100%);
     top: 50%;
     transform: translateY(-50%);
     color: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-input:hover + .form-icon {
@@ -705,25 +712,27 @@ transform: translate(-50%, -100%);
     display: block;
     padding-right: 24px;
         padding-left: 24px;
+        margin-bottom: 16px;
 }
 
-textarea {
+.user-comment {
     resize: none;}
 
 .form-textarea {
 border: 1px solid rgba(46, 47, 66, 0.4);
+color: rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     width: 100%;
     height: 120px;
     background-color: transparent;
     outline: transparent;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding-left: 16px;
-    padding-top: 8px;
+    padding: 8px 16px;
     font-weight: 400;
         font-size: 12px;
         line-height: 1.17;
         letter-spacing: 0.04em;
+        resize: none;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-textarea:hover,
@@ -737,7 +746,7 @@ border: 1px solid rgba(46, 47, 66, 0.4);
 
 .modal-checkbox {padding-left: 24px;
 margin-bottom: 24px;
-margin-top: 16px;}
+}
 
 
 .checkbox-span {
@@ -767,7 +776,7 @@ margin-top: 16px;}
 input:checked+label>span {
     border: none;
     background-color: #404BBF;
-    fill: #404bbf;
+    fill: #F4F4FD;
 }
 
 .checkbox-label {text-align: center;
@@ -789,14 +798,15 @@ input:checked+label>span {
 .primary-btn {display: block;
     border-radius: 4px;
         padding: 16px 32px;
-        width: 169px;
+        min-width: 169px;
         height: 56px;
         box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
         background: #4d5ae5;
         border: none;
         cursor: pointer;
+        margin-right: 120px;
+        margin-left: 120px;
         margin-bottom: 24px;
-        margin-left: 119px;
             font-weight: 500;
             font-size: 16px;
             line-height: 1.5;
