--- a/css/styles.css
+++ b/css/styles.css
@@ -499,7 +499,6 @@ margin: 0 auto;
             border-radius: 4px;
             width: 264px;
             height: 40px;
-            background-color: transparent;
             box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
             background: #2e2f42;
             padding-left: 16px;
@@ -509,7 +508,8 @@ margin: 0 auto;
                 font-size: 12px;
                 line-height: 2;
                 letter-spacing: 0.04em;
-                color: #ffffff
+                color: #ffffff;
+                background-color: transparent;
         }
     
     .footer-form-input::placeholder {
@@ -528,7 +528,7 @@ border-color: #404bbf;
         gap: 16px;
         padding: 0;
         border-radius: 4px;
-        width: 165px;
+        min-width: 165px;
         height: 40px;
         background: #4d5ae5;
         cursor: pointer;
@@ -710,7 +710,6 @@ transform: translate(-50%, -100%);
     padding-right: 24px;
         padding-left: 24px;
         margin-bottom: 16px;
-        width: 100%;
 }
 
 .user-comment {
