--- a/css/styles.css
+++ b/css/styles.css
@@ -654,8 +654,6 @@ transform: translate(-50%, -100%);
 
 .form-field {
     display: block;
-    padding-right: 24px;
-    padding-left: 24px;
     margin-bottom: 8px;
 }
 
@@ -707,10 +705,6 @@ transform: translate(-50%, -100%);
 
 .modal-textarea {
     display: block;
-    padding-right: 24px;
-        padding-left: 24px;
-        margin-bottom: 16px;
-        width: 100%;
 }
 
 .user-comment {
@@ -720,6 +714,7 @@ transform: translate(-50%, -100%);
 border: 1px solid rgba(46, 47, 66, 0.4);
 color: rgba(46, 47, 66, 0.4);
     border-radius: 4px;
+    width: 100%;
     height: 120px;
     background-color: transparent;
     outline: transparent;
@@ -741,7 +736,7 @@ color: rgba(46, 47, 66, 0.4);
         color: rgba(46, 47, 66, 0.4);
 }
 
-.modal-checkbox {padding-left: 24px;
+.modal-checkbox {
 margin-bottom: 24px;
 }
 
@@ -782,7 +777,6 @@ input:checked+label>span {
         line-height: 1.17;
         letter-spacing: 0.04em;
         color: #8e8f99;
-        margin-bottom: 24px;
 }
 
 .checkbox-link {
@@ -801,8 +795,7 @@ input:checked+label>span {
         background: #4d5ae5;
         border: none;
         cursor: pointer;
-        margin-right: 120px;
-        margin-left: 120px;
+        margin: auto;
         margin-bottom: 24px;
             font-weight: 500;
             font-size: 16px;
